# mlops_speed_to_text

./: .gitignore  DockerFile  Dockerfile  Makefile  README.md  app.py  data_train_70.6.dvc  docker-compose.yml  dvc.yaml  eval_wav2vec2.py  frontend.py  mock_app.py  mock_grafana.py  params.yaml  person_name_500.dvc  pyproject.toml  pytest.ini  requirements-vi.txt  train_wav2vec2.py
.dvc/: config
.github/workflows/: docker-build.yml  tests.yml
data/: data_train_70.6.dvc
deployment/: Dockerfile.api  Dockerfile.ui  docker-compose.yml  prometheus.yml
k8s/: deployment.yaml  service.yaml
mlruns/179421198538450748/: meta.yaml
mlruns/179421198538450748/03e7c21d52cb45cca1af1c34c136a344/: meta.yaml
mlruns/179421198538450748/04bcdaf8bbde4c0eb16dfed44ac27e6b/: meta.yaml
mlruns/179421198538450748/0c36e69abf024c37a04ac5287436bd44/: meta.yaml
mlruns/179421198538450748/128910803cce4cb698b3e68ac65b6d87/: meta.yaml
mlruns/179421198538450748/13832309b8eb408abe29c4be9504fef8/: meta.yaml
mlruns/179421198538450748/1b8aff5629dc4839a18180cd2d57c16d/: meta.yaml
mlruns/179421198538450748/1fbc2f22f80b4aaca3d1c10f9bb5118a/: meta.yaml
mlruns/179421198538450748/285325c0b8ab49e79290a427f76d531b/: meta.yaml
mlruns/179421198538450748/2fcde62db8cc4a0db0c17a1925727026/: meta.yaml
mlruns/179421198538450748/34179a95a1c74741be2d9e0cc63e2b64/: meta.yaml
mlruns/343600767876820782/: meta.yaml
mlruns/989573568948490240/: meta.yaml
models/: baseline_distribution.json.dvc
src/api/: app.py
src/models/: eval_baseline.py  eval_wav2vec2.py  extract_baseline.py  train_wav2vec2.py
src/ui/: frontend.py
tests/: __init__.py  conftest.py  test_eval_utils.py  test_preprocessing.py
(+368 files in other folders)
